<resources>
    <string name="app_name">Weather</string>

    <string name="menu_item_kigali">Kigali, RW</string>
    <string name="menu_item_tokyo">Tokyo, JP</string>
    <string name="menu_item_paris">Paris, FR</string>
    <string name="menu_item_berlin">Berlin, DE</string>
    <string name="menu_item_london">London, GB</string>
    <string name="menu_item_canberra">Canberra, AU</string>
    <string name="menu_item_ottawa">Ottawa, CA</string>
    <string name="menu_item_spb">Saint-Petersburg, RU</string>


    <string name="menu_item_exit">Quit</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
</resources>
